- Added logbook.utils.suppressed_deprecations context to temporarily suppress deprecations (Thanks Ayala Shachar)
- Added logbook.utils.logged_if_slow_context to emit logs when certain operations exceed a time threshold (Thanks Ayala Shachar)
- Many PEP8 fixes and code cleanups (thanks Taranjeet Singh and Frazer McLean)


Version 0.11.3
--------------

Released on November 5th 2015

- Windows-specific fixes and CI configuration (Thanks Frazer McLean)
- Several Unicode-specific fixes (Thanks Frazer McLean)
- Documentation cleanups

Version 0.11.2
--------------

Released on September 29th 2015

- Fix importing issue with SQLAlchemy ticketing handler

Version 0.11.0
--------------

Released on September 29th 2015

- Added TRACE log level for enabling logs below DEBUG
- Improved SQLAlchemy session management (thanks @fintan)
- Removed the ``bubble`` argument from NullHandler, preventing many future confusions

Version 0.10.1
--------------

Released on August 4th 2015

- Small bugfix supporting exc_info=False without breaking formatting

Version 0.10.0
--------------

Released on July 14th 2015

- Removed the global handler which was installed by default so far. The rationale is to ease adoption for 3rd party libraries who don't want output to go to stderr by default. The old behavior can still be restored by setting the LOGBOOK_INSTALL_DEFAULT_HANDLER environment variable
- Fix small Python 3 compatibility issues

Version 0.9.1
-------------

Released on May 4th 2015

- Minor fixes


Version 0.9.0
-------------

Released on February 12th 2015

- Added frame correction option, to properly mark log record origins (Thanks Roey Darwish)
- Fixed MailHandler infinite recursion bug (Thanks Tal Yalon)


Version 0.8.1
-------------

Released on November 30th 2014

- Fix support for gevent, along with various other fixes (Thanks Tal Yalon)

Version 0.8.0
-------------

Released on November 11th 2014. Codename "improve_some_more"

- Added Pushover handler (thanks @owo)