@@ -10,6 +10,7 @@ Version 0.12.0
 - Added logbook.utils.suppressed_deprecations context to temporarily suppress deprecations (Thanks Ayala Shachar)
 - Added logbook.utils.logged_if_slow_context to emit logs when certain operations exceed a time threshold (Thanks Ayala Shachar)
 - Many PEP8 fixes and code cleanups (thanks Taranjeet Singh and Frazer McLean)
+- TestHandler constructor now receives an optional `force_heavy_init=True`, forcing all records to heavy-initialize
 
 
 Version 0.11.3
